[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scripts/platform.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/player.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/platform.png" type="Texture" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2(240, 400)
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
position = Vector2(10, 10)
text = "SCORE: 0"

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
position = Vector2(120, 350)
text = "GAME OVER"
visible = false

[node name="ReviveButton" type="Button" parent="CanvasLayer"]
position = Vector2(140, 400)
text = "Reviver com an√∫ncio"
visible = false

[node name="Platform" type="KinematicBody2D" parent="."]
position = Vector2(100, 500)
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Platform"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = RectangleShape2D {
    extents = Vector2(16, 4)
}
